Fix dark mode items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,7 +30,6 @@ section + section {
 	position: relative;
 	max-width: 100%;
 	margin-top: 10px;
-	margin-left: 20px;
 
 	/* timeline vertical line */
 	&::after {
